# table-rl

./: README.md  pyproject.toml  setup.py
examples/: q_learning_taxi.py
scripts/: gridworld_policy_eval.py  gridworld_q_learner.py
table_rl/: __init__.py  explorer.py  step_size_scheduler.py
table_rl/dp/: dp.py
table_rl/env/: __init__.py  test_env.py
table_rl/envs/: overestimation_env.py
table_rl/explorers/: __init__.py  epsilon_greedy.py  fixed_policy_explorer.py  greedy.py  policy_executor.py  softmax.py
table_rl/learners/: __init__.py  double_q_learning.py  dueling_q_learning.py  expected_sarsa.py  q_learning.py  qv.py  sarsa.py
table_rl/step_size_schedulers/: basic_step_size_schedulers.py
table_rl/utils/: __init__.py  artifact_utils.py
tests/: test_double_q_learning.py  test_dp.py  test_explorers.py  test_q_learning.py  test_sarsa.py
tests/env_tests/: overestimation_env_test.py
tests/learner_tests/: test_double_q_learning.py  test_expected_sarsa.py  test_q_learning.py  test_qv_learning.py  test_sarsa.py
