[project]
name = "table-rl"
version = "0.2.0"
description = "table-rl, an online tabular reinforcement learning library"
readme = "README.md"
authors = [
    { name = "Prabhat Nagarajan", email = "nagarajan@ualberta.ca" },
]
license = { text = "MIT License" }
dependencies = [
    "gymnasium",
    "numpy>=1.10.4",
]

[project.optional-dependencies]
test = [
    "pytest",
    "attrs<19.2.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["table_rl"]  # Or use `find = {} ` if you want automatic discovery

[tool.setuptools.packages.find]
where = ["."]
